--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -4,7 +4,7 @@ body {
 }
 #wrapper {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   background-color: rgb(241, 241, 241);
 }
 .card {
